@@ -1,3 +1,6 @@
+2009-11-13   D. V. Wiebe <getdata@ketiltrout.net>   svn:345
+	* src/getdata.h.in: Don't include <complex.h>; use _Complex directly.
+
 2009-11-03   D. V. Wiebe <getdata@ketiltrout.net>   svn:340
 	GetData 0.6.0 released.
 
